v1.0.1
- Add German Classification Ratings

v1.0.0
- Initial Version